trying to setup gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Samar-ctrl.github.io/adopt-me",
+  "homepage": "https://Samar-ctrl.github.io/adopt-me",
   "name": "adopt-me",
   "version": "1.0.0",
   "description": "",
